2012-06-22  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	Escape RTF word break.

	* src/filterrtf.cpp (FilterRTF::FilterRTF):
	  - Escape word break text, according to Widhaya Trisarnwadhana.

2012-06-22  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	Revert input conversion on FilterRTF.

	* src/filterhtml.cpp (FilterRTF::GetNextToken):
	  - Revert ConvGetC() replacements to fgetc(). RTF stores characters
	    in escaped form, not directly UTF-8.

2012-06-20  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	Add input conversion for FilterRTF.

	* src/filterhtml.cpp (FilterRTF::GetNextToken):
	  - Replace fgetc() calls with ConvGetC().

2012-06-20  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	Add input conversion for FilterHtml.

	* src/convutil.h, src/convutil.cpp:
	  - Add ConvGetC() function resembling fgetc().
	* src/filterhtml.cpp (FilterHtml::GetNextToken):
	  - Replace fgetc() calls with ConvGetC().

2012-06-20  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	Drop MAXCHAR macro and just use MAXLEN.

	* src/wordseg.cpp:
	  - Drop MAXCHAR macro def.
	  - s/MAXCHAR/MAXLEN/g.

2012-06-20  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	Add input conversion for FilterLatex.

	* src/Makefile.am, +src/convutil.h, +src/convutil.cpp:
	  - Add conversion utility functions resembling libc functions.
	  - Move UCopy() from src/wordseg.cpp to ConvCopy() here.
	  - Add ConvGetS() function resembling fgets().
	* src/wordseg.cpp (WordSegmentation):
	  - Replace UCopy() calls with ConvCopy().
	* src/filterlatex.cpp (FilterLatex::GetNextToken):
	  - Replace fgets() calls with ConvGetS().

2012-05-02  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	Only convert output text, not the wbr string.

	Let's move the output sentence creation into WordSegmentation().
	This means Unicode moving conversion from main() (upper layer),
	and wbr insertion from AbsWordSeg::WordSeg() (lower layer).

	* src/wordseg.cpp (WordSegmentation):
	  - Add isUniOut parameter.